--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=healthcare
 
 # MySQL Database ??
 spring.datasource.url=jdbc:mysql://localhost:3306/healthcare?serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=ehrbs123123.
+spring.datasource.username
+spring.datasource.password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA ??
